--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,7 @@ spring.datasource.password=1234
 
 spring.thymeleaf.cache=false
 spring.thymeleaf.suffix=.html
-spring.thymeleaf.prefix=classpath:templates/
+spring.thymeleaf.prefix=classpath:/templates
 
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.generate-ddl=false
