--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ plugins {
 
 group = 'com.recruit'
 version = '0.1'
-sourceCompatibility = '1.8'
+sourceCompatibility = "11"
 
 repositories {
 	mavenCentral()
@@ -44,3 +44,4 @@ jar {
 test {
 	useJUnitPlatform()
 }
+targetCompatibility = JavaVersion.VERSION_11
