--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,4 +21,4 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 logging.level.web=DEBUG
-logging.level.org.hibernate=TRACE
+logging.level.org.hibernate=ERROR
