--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,9 @@ spring.datasource.password=1234
 
 spring.thymeleaf.cache=false
 spring.thymeleaf.suffix=.html
-spring.thymeleaf.prefix=classpath:/templates
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.check-template-location=true
+spring.thymeleaf.mode=HTML5
 
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.generate-ddl=false
